# Ratatouille-Project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
backend/: .env  .env.example  .gitignore  deno.json  ingredientList.txt  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
backend/src/config/: database.ts
backend/src/helpers/: conversionTable.ts
backend/src/models/: LangchainModels.ts  MealPlan.ts  Recipe.ts
backend/src/services/: ingredientCleaner.ts  pdfProcessor.ts  planBuilder.ts  urlProcessor.ts
frontend/: .gitignore  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddRecipeDialog.tsx  Header.tsx  HomePage.tsx  MealPlan.tsx  RecipeDetails.tsx  RecipeManagement.tsx  ShoppingList.tsx
frontend/src/models/: Recipe.ts
ratatouille/: chains.py  models.py  notebook.ipynb
shared/: Ingredient.ts  Recipe.ts
src/ratatouille/: recipe.py
tests/: test_recipe.py
